@@ -4,8 +4,9 @@
 //
 //===========================================================================
 
-21 Jan 2019 John Back
-    Correct B 4-momentum in EvtSLDiBaryonAmp for the BToDiBaryonlnupQCD model.
+21 & 24 Jan 2019 John Back
+    Correct B 4-momentum in EvtSLDiBaryonAmp for the BToDiBaryonlnupQCD model,
+    as well as including a parity factor for the vector amplitude terms.
 
 7th December 2018 John Back
     Added the EvtBLLNuL (BLLNUL) model that generates rare B -> ell ell nu ell 
